--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "expo": "~48.0.15",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
+    "i18next": "^23.2.0",
+    "intl-pluralrules": "^2.0.0",
     "react": "18.2.0",
+    "react-i18next": "^13.0.0",
     "react-native": "0.71.7",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
