--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
     "dayjs": "^1.11.7",
     "expo": "~48.0.15",
+    "expo-av": "^13.4.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "i18next": "^23.2.0",
     "intl-pluralrules": "^2.0.0",
+    "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
     "react-i18next": "^13.0.0",
     "react-native": "0.71.8",
