--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "talktogodapp",
-    "slug": "talktogodapp",
+    "slug": "talk-to-gods",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "92629427-ff95-48f1-b3d2-52dfc95ca533"
+      }
+    },
+    "owner": "vivekkrvks"
   }
 }
