--- a/app.json
+++ b/app.json
@@ -31,6 +31,6 @@
         "projectId": "92629427-ff95-48f1-b3d2-52dfc95ca533"
       }
     },
-    "owner": "vivekkrvks"
+    "owner": "viveksinra"
   }
 }
