--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-i18next": "^13.0.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-upi-payment": "^1.0.3"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
