--- a/app.json
+++ b/app.json
@@ -2,9 +2,8 @@
   "expo": {
     "name": "Talk To God",
     "slug": "talk-to-gods",
-    "version": "1.1.0",
+    "version": "2.1.0",
     "versionCode": 2, 
-    "android.versionCode":"1.2.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -20,6 +19,7 @@
       "supportsTablet": true
     },
     "android": {
+      "versionCode": 2, 
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
